# swagger.json
@@ -135,6 +135,22 @@
                 }
             }
         },
+        "/api/v1/control/logs/latest": {
+            "get": {
+                "tags": [
+                    "Control"
+                ],
+                "operationId": "GetAllLatestLogs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetAllLatestLogsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/control/open-door": {
             "post": {
                 "tags": [
@@ -210,6 +226,20 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "GetAllLatestLogsResponse": {
+            "type": "object",
+            "required": [
+                "logs"
+            ],
+            "properties": {
+                "logs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domains.Log"
+                    }
                 }
             }
         },
@@ -318,11 +348,15 @@
         "domains.Log": {
             "type": "object",
             "required": [
+                "created_at",
                 "device_name",
                 "id",
                 "status"
             ],
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
                 "device_name": {
                     "type": "string"
                 },
